terraform/kubernetes/cluster-policies/cilium/cilium-module/sources/nginx-gateway/cnp-nginx-gateway-observed-ingress-candidate.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nginx-gateway-observed-ingress-candidate
  namespace: nginx-gateway
  annotations:
    "policies.cilium.io/title": "Nginx Gateway observed ingress candidate"
    "platform.publiccloudexperiments.net/source-kind": "CiliumNetworkPolicy"
    "platform.publiccloudexperiments.net/hubble-policy-candidate": "true"
    "platform.publiccloudexperiments.net/hubble-policy-direction": "ingress"
    "platform.publiccloudexperiments.net/hubble-policy-mode": "workload"
    "platform.publiccloudexperiments.net/hubble-policy-row-count": "1"
    "platform.publiccloudexperiments.net/hubble-policy-since": "5m"
    "platform.publiccloudexperiments.net/hubble-policy-iterations": "3"
    "platform.publiccloudexperiments.net/hubble-policy-capture-mode": "flows"
specs:
  - description: >-
      Observed ingress traffic from nginx-gateway/nginx-gateway
    endpointSelector:
      matchLabels:
        "k8s:io.kubernetes.pod.namespace": "nginx-gateway"
        "k8s:app.kubernetes.io/name": "nginx-gateway"
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
